Corrcted .my-skills diagram

--- a/src/components/my-skills/my-skills.hbs
+++ b/src/components/my-skills/my-skills.hbs
@@ -8,8 +8,32 @@
             </div>
             <a href="#contact-me" class="button my-skills__button">Contact Me</a>
         </div>
-        <div class="my-skills__right">
+        <div class="my-skills__right diagram-correction">
+            <ul class="my-skills__diagram">
+                <li class="my-skills__line">
+                    <div class="my-skills__line-title">Photoshop</div>
+                    <div id="photoshop" data-progressbar="75">
+                    </div>
+                </li>
+                <li class="my-skills__line">
+                    <div class="my-skills__line-title">Illustrator</div>
+                    <div id="illustrator" data-progressbar="90">
 
+                    </div>
+                </li>
+                <li class="my-skills__line">
+                    <div class="my-skills__line-title">HTML / CSS</div>
+                    <div id="htmlcss"  data-progressbar="80">
+
+                    </div>
+                </li>
+                <li class="my-skills__line">
+                    <div class="my-skills__line-title">PHP / MYSQL</div>
+                    <div id="phpmysql"  data-progressbar="65">
+
+                    </div>
+                </li>
+            </ul>
         </div>
 
     </div>
