--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -8,6 +8,11 @@
 
 
   @media(max-width: 1200px) {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  @media(max-width: 576px) {
     padding-left: 15px;
     padding-right: 15px;
   }
