--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,4 +1,5 @@
 @import './social-media/social-media';
+@import './progressbar/progressbar';
 @import './container/container';
 @import './button/button';
 @import './main-header/main-header';
