Addded .sticky menu

--- a/src/components/contact-me/contact-me.hbs
+++ b/src/components/contact-me/contact-me.hbs
@@ -38,7 +38,9 @@
                         <textarea name="message" id="message" class="contact-me__form-area"></textarea>
                     </label>
                 </div>
-                <button class="button contact-me__submit">Contact me</button>
+                <div class="contact-me__submit-wrapper">
+                    <button class="button contact-me__submit">Contact me</button>
+                </div>
             </form>
         </div>
     </div>
