--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,4 +1,6 @@
 @import './social-media/social-media';
+@import './sticky-menu/sticky-menu';
+@import './menu-toggle/menu-toggle';
 @import './progressbar/progressbar';
 @import './container/container';
 @import './button/button';
