--- a/src/components/main-banner/main-banner.scss
+++ b/src/components/main-banner/main-banner.scss
@@ -1,11 +1,19 @@
 .main-banner {
   padding-bottom: 92px;
 
+  @media(max-width: 992px) {
+    padding-bottom: 50px;
+  }
+
   &__values {
     padding-top: 99px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media(max-width: 992px) {
+      padding-top: 120px;
+    }
 
     @media(max-width: 840px) {
       flex-direction: column;
