--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -75,6 +75,10 @@ a[href] {
 p {
   margin-top: 0.5rem;
   margin-bottom: 1.7rem;
+
+  @media(max-width: 992px) {
+    margin-bottom: .7rem;
+  }
 }
 
 table {
@@ -104,6 +108,10 @@ h1, h2 {
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 37px;
+
+  @media(max-width: 992px) {
+    text-align: center;
+  }
 }
 
 .green {
