--- a/src/components/about-me/about-me.scss
+++ b/src/components/about-me/about-me.scss
@@ -21,12 +21,18 @@
 
     @media(max-width: 992px) {
       margin-left: 0;
+      width: 100%;
     }
   }
 
   &__right {
     padding-left: 100px;
     padding-top: 97px;
+
+    @media(max-width: 992px) {
+      padding-left: 0;
+      padding-top: 50px;
+    }
   }
 
   &__vantages {
@@ -36,6 +42,10 @@
 
     @media(max-width: 1400px) {
       margin-right: 0;
+    }
+
+    @media(max-width: 992px) {
+      justify-content: center;
     }
   }
 
@@ -57,6 +67,10 @@
     &-icon {
       align-self: flex-start;
       padding-right: 29px;
+
+      @media(max-width: 480px) {
+        display: none;
+      }
     }
 
     &-title {
