--- a/src/components/contact-me/contact-me.scss
+++ b/src/components/contact-me/contact-me.scss
@@ -3,6 +3,11 @@
   padding-top: 97px;
   padding-bottom: 101px;
 
+  @media(max-width: 992px) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
   &__container {
     display: flex;
 
@@ -18,6 +23,7 @@
     padding-right: 25px;
 
     @media(max-width: 992px) {
+      width: 100%;
       padding-bottom: 40px;
       padding-right: 0;
     }
@@ -30,13 +36,19 @@
 
     @media(max-width: 992px) {
       padding-left: 0;
+      width: 100%;
     }
+
   }
 
   &__headline {
     color: #fff;
     margin-bottom: 37px;
     line-height: 1;
+
+    @media(max-width: 992px) {
+      text-align: center;
+    }
   }
 
   &__item {
@@ -51,6 +63,13 @@
   }
 
   &__form {
+    max-width: 540px;
+    align-self: center;
+    @media(max-width: 992px) {
+      margin: 0 auto;
+    }
+
+
 
     &-field {
       width: 100%;
@@ -72,7 +91,6 @@
 
   &__field {
     &-wrap {
-      max-width: 540px;
       margin-bottom: 32px;
     }
 
@@ -89,5 +107,12 @@
     color: #fff;
     background-color: #191f21;
     margin-top: 1px;
+
+    &-wrapper {
+      @media(max-width: 992px) {
+        display: flex;
+        justify-content: center;
+      }
+    }
   }
 }
