--- a/src/components/main-header/main-header.hbs
+++ b/src/components/main-header/main-header.hbs
@@ -7,5 +7,11 @@
             <div class="main-header__logo-slogan">fo<span class="green">cal</span></div>
         </div>
         {{> nav }}
+        <div class="main-header__social-media">
+            {{> social-media }}
+        </div>
+        <div class="main-header__menu-toggle">
+            {{> menu-toggle }}
+        </div>
     </div>
 </header>
