--- a/src/components/main-header/main-header.scss
+++ b/src/components/main-header/main-header.scss
@@ -4,15 +4,6 @@
   align-items: center;
   min-height: 70px;
 
-  &_sticky {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-  }
-
   &__container {
     display: flex;
     align-items: center;
@@ -54,6 +45,24 @@
       margin-right: 0;
     }
 
+    @media(max-width: 992px) {
+      transform: translateX(100%);
+      display: flex;
+      flex-direction: column;
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      top: 0;
+      padding-top: 70px;
+      background-color: #4b5456;
+      width: 100%;
+      max-width: 240px;
+      opacity: 0.8;
+      padding-left: 50px;
+      transition: 0.5s;
+      z-index: 42;
+    }
+
 
     &-link {
       color: #fff;
@@ -69,10 +78,38 @@
         padding: 28px 5px;
       }
 
+      @media(max-width: 992px) {
+        padding: 20px;
+      }
+
       &:hover {
         color: #2ecc71;
       }
     }
+
+    &.is-open {
+      transform: translateX(0);
+    }
   }
 
+  &__social-media {
+    display: none;
+
+    @media(max-width: 992px) {
+      display: block;
+    }
+
+    @media(max-width: 576px) {
+      display: none;
+    }
+  }
+
+  &__menu-toggle {
+    display: none;
+
+    @media(max-width: 992px) {
+      display: block;
+    }
+  }
 }
+
