--- a/src/components/my-skills/my-skills.scss
+++ b/src/components/my-skills/my-skills.scss
@@ -2,6 +2,11 @@
   padding-top: 96px;
   padding-bottom: 180px;
 
+  @media(max-width: 992px) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
   &__delimiter {
     border-bottom: 1px solid #ccc;
   }
@@ -23,6 +28,10 @@
       padding-right: 0;
       width: 100%;
     }
+
+    &-correction {
+      padding-bottom: 75px;
+    }
   }
 
   &__right {
@@ -31,14 +40,28 @@
     padding-top: 73px;
 
     @media(max-width: 992px) {
+      display: flex;
+      justify-content: center;
       padding-left: 0;
       padding-right: 0;
+      padding-top: 0;
       width: 100%;
+    }
+
+    &-correction {
+      padding-left: 50px;
+      padding-top: 37px;
+
+      @media(max-width: 992px) {
+        padding-left: 0;
+        padding-top: 0;
+      }
     }
   }
 
   &__diagram {
     max-width: 560px;
+    width: 100%;
   }
 
   &__line {
@@ -61,10 +84,13 @@
   &__button {
     color: #2ecc71;
     border: 2px solid #2ecc71;
+
+    &-wrapper {
+      @media(max-width: 992px) {
+        display: flex;
+        justify-content: center;
+      }
+    }
   }
 }
 
-.diagram-correction {
-  padding-left: 50px;
-  padding-top: 37px;
-}
