--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -14,3 +14,4 @@
 @import './my-porfolio/my-porfolio';
 @import './contact-me/contact-me';
 @import './main-footer/main-footer';
+@import './scroll-up/scroll-up';
