--- a/src/components/scroll-up/scroll-up.hbs
+++ b/src/components/scroll-up/scroll-up.hbs
@@ -1,3 +1,3 @@
-<div class="scrollup">
-    <div class="scrollup__text">up</div>
+<div class="scroll-up">
+    <div class="scroll-up__text">up</div>
 </div>
