--- a/src/components/scroll-up/scroll-up.scss
+++ b/src/components/scroll-up/scroll-up.scss
@@ -1,4 +1,4 @@
-.scrollup {
+.scroll-up {
   display: none;
   position: fixed;
   left: 20px;
@@ -7,7 +7,7 @@
   z-index: 50;
   width: 80px;
   height: 80px;
-  border: 3px solid #8ea4a6;
+  border: 3px solid #2ecc71;
   text-align: center;
   background: #fff;
   opacity: 0.8;
@@ -16,11 +16,11 @@
     height: 60px;
     width: 60px;
 
-    .scrollup__text {
+    .scroll-up__text {
       color: transparent;
     }
 
-    .scrollup__text:before {
+    .scroll-up__text:before {
       margin: 40% auto 0;
       display: block;
       content: '';
@@ -35,7 +35,7 @@
   }
 
   &__text{
-    color: #8ea4a6;
+    color: #2ecc71;
     font-size: 14px;
     text-transform: uppercase;
     display: block;
@@ -46,7 +46,7 @@
       content: '';
       height: 25px;
       width: 25px;
-      border: 2px solid #8ea4a6;
+      border: 2px solid #2ecc71;
       border-left-color: transparent;
       border-bottom-color: transparent;
       transition: .4s;
