added thumbs of all works to .my-portfolio

--- a/src/components/my-porfolio/my-porfolio.hbs
+++ b/src/components/my-porfolio/my-porfolio.hbs
@@ -22,7 +22,52 @@
         </ul>
         <div class="my-portfolio__works-wrapper">
             <ul class="my-portfolio__works">
-                <li class="my-portfolio__work pug gulp">
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/miami366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Лендинг Miami Condo Kings</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="http://sitesdepot.ru/works/miami/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery. </p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/driving366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Лендинг Автошколы</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="http://sitesdepot.ru/works/driving/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery. </p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/volki366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Сайт питомника служебных собак</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="http://sitesdepot.ru/works/volki/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, slick-carousel. </p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
+                <li class="my-portfolio__work">
                     <div class="my-portfolio__work-visible">
                         <img src="images/wezom366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -40,7 +85,7 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work pug gulp">
+                <li class="my-portfolio__work">
                     <div class="my-portfolio__work-visible">
                         <img src="images/ayudag366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
@@ -57,23 +102,6 @@
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work pug gulp">
-                    <div class="my-portfolio__work-visible">
-                        <img src="images/strat366x300.png" alt="" class="my-portfolio__work-img">
-                    </div>
-                    <div class="my-portfolio__work-hidden">
-                        <p class="my-portfolio__work-title">Страница консалтинговой фирмы</p>
-                        <p class="my-portfolio__work-link">
-                            <a href="https://leonziger.github.io/stratg/" target="_blank">веб-ресурс</a>
-                        </p>
-                        <p class="my-portfolio__work-link">
-                            <a href="https://github.com/leonziger/stratg" target="_blank">код на гитхабе</a>
-                        </p>
-                        <p><span class="strong">Кодинг/разметка:</span> HTML(pug)+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, vanilla-text-mask.</p>
-                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
-                    </div>
-                </li>
                 <li class="my-portfolio__work">
                     <div class="my-portfolio__work-visible">
                         <img src="images/strat366x300.png" alt="" class="my-portfolio__work-img">
@@ -93,53 +121,70 @@
                 </li>
                 <li class="my-portfolio__work">
                     <div class="my-portfolio__work-visible">
-                        <img src="images/strat366x300.png" alt="" class="my-portfolio__work-img">
+                        <img src="images/shakers366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
                     <div class="my-portfolio__work-hidden">
-                        <p class="my-portfolio__work-title">Страница консалтинговой фирмы</p>
+                        <p class="my-portfolio__work-title">Лендинг Шейкеры</p>
                         <p class="my-portfolio__work-link">
-                            <a href="https://leonziger.github.io/stratg/" target="_blank">веб-ресурс</a>
+                            <a href="https://leonziger.github.io/shakers/" target="_blank">веб-ресурс</a>
                         </p>
                         <p class="my-portfolio__work-link">
-                            <a href="https://github.com/leonziger/stratg" target="_blank">код на гитхабе</a>
+                            <a href="https://github.com/leonziger/shakers" target="_blank">код на гитхабе</a>
                         </p>
                         <p><span class="strong">Кодинг/разметка:</span> HTML(pug)+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery,  slick-carousel.</p>
+                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                    </div>
+                </li>
+                <li class="my-portfolio__work">
+                    <div class="my-portfolio__work-visible">
+                        <img src="images/suntour366x300.png" alt="" class="my-portfolio__work-img">
+                    </div>
+                    <div class="my-portfolio__work-hidden">
+                        <p class="my-portfolio__work-title">Страница турагентства</p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://leonziger.github.io/sun-tour/" target="_blank">веб-ресурс</a>
+                        </p>
+                        <p class="my-portfolio__work-link">
+                            <a href="https://github.com/leonziger/sun-tour" target="_blank">код на гитхабе</a>
+                        </p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
                         <p><span class="strong">Плагины/библиотеки:</span> jQuery, vanilla-text-mask.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
                 <li class="my-portfolio__work">
                     <div class="my-portfolio__work-visible">
-                        <img src="images/strat366x300.png" alt="" class="my-portfolio__work-img">
+                        <img src="images/buyheater366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
                     <div class="my-portfolio__work-hidden">
-                        <p class="my-portfolio__work-title">Страница консалтинговой фирмы</p>
+                        <p class="my-portfolio__work-title">лендинг по продаже обогревателей</p>
                         <p class="my-portfolio__work-link">
-                            <a href="https://leonziger.github.io/stratg/" target="_blank">веб-ресурс</a>
+                            <a href="http://sitesdepot.ru/st-buy-heater/" target="_blank">веб-ресурс</a>
                         </p>
                         <p class="my-portfolio__work-link">
-                            <a href="https://github.com/leonziger/stratg" target="_blank">код на гитхабе</a>
+                            <a href="https://github.com/leonziger/buy-heater" target="_blank">код на гитхабе</a>
                         </p>
                         <p><span class="strong">Кодинг/разметка:</span> HTML(pug)+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, vanilla-text-mask.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery,  vanilla-text-mask, jquery.maskedinput, jquery-validation, FlipClock, vex-js.</p>
                         <p><span class="strong">Сборка проекта:</span> gulp.</p>
                     </div>
                 </li>
-                <li class="my-portfolio__work">
+                <li class="my-portfolio__work webpack">
                     <div class="my-portfolio__work-visible">
-                        <img src="images/strat366x300.png" alt="" class="my-portfolio__work-img">
+                        <img src="images/invite366x300.png" alt="" class="my-portfolio__work-img">
                     </div>
                     <div class="my-portfolio__work-hidden">
-                        <p class="my-portfolio__work-title">Страница консалтинговой фирмы</p>
+                        <p class="my-portfolio__work-title">Лендинг</p>
                         <p class="my-portfolio__work-link">
-                            <a href="https://leonziger.github.io/stratg/" target="_blank">веб-ресурс</a>
+                            <a href="https://leonziger.github.io/invite-transport" target="_blank">веб-ресурс</a>
                         </p>
                         <p class="my-portfolio__work-link">
-                            <a href="https://github.com/leonziger/stratg" target="_blank">код на гитхабе</a>
+                            <a href="https://github.com/leonziger/invite-transport" target="_blank">код на гитхабе</a>
                         </p>
-                        <p><span class="strong">Кодинг/разметка:</span> HTML(pug)+SCSS.</p>
-                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, vanilla-text-mask.</p>
-                        <p><span class="strong">Сборка проекта:</span> gulp.</p>
+                        <p><span class="strong">Кодинг/разметка:</span> HTML+SCSS.</p>
+                        <p><span class="strong">Плагины/библиотеки:</span> jQuery, Vue.js, Bootstrap3.</p>
+                        <p><span class="strong">Сборка проекта:</span> webpack.</p>
                     </div>
                 </li>
                 <li class="my-portfolio__work webpack">
