--- a/src/components/my-porfolio/my-porfolio.scss
+++ b/src/components/my-porfolio/my-porfolio.scss
@@ -13,7 +13,7 @@
 
   &__description {
     display: flex;
-    margin: -9px auto 14px;
+    margin: -9px auto 44px;
     padding: 0 70px;
   }
 
@@ -31,7 +31,7 @@
     }
 
      &-menu {
-      display: flex;
+      display: none;
       justify-content: space-between;
       margin: 0 auto;
       max-width: 800px;
@@ -57,13 +57,6 @@
       margin: 10px;
     }
 
-    @media(max-width: 1200px) {
-
-    }
-
-    @media(max-width: 840px) {
-      margin: 0 0 20px 0;
-    }
 
     @media(max-width: 400px) {
       width: 300px;
